--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,19 @@ project(vulkan_project)
 add_executable(vulkan_project main.cpp)
 
 find_package(Vulkan REQUIRED)
-find_package(glfw3 REQUIRED)
-find_package(glm REQUIRED)
+find_package(glfw3 CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_BUILD_TYPE Debug)
 
-target_link_libraries(vulkan_project Vulkan::Vulkan glfw glm)
+if(WIN32)
+  # Enable Hot Reload for MSVC compilers if supported.
+  if (POLICY CMP0141)
+    cmake_policy(SET CMP0141 NEW)
+    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+  endif()
+elseif(APPLE)
+endif()
+
+target_link_libraries(vulkan_project Vulkan::Vulkan glfw glm::glm)
