feat: add vertex buffer and refactor
- bind vertex input rate and attributes to get
  triangle rendered
- refactor app, pipeline, and lib into header and
  source

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 cmake_minimum_required(VERSION 3.29)
 project(vulkan_project)
 
-add_executable(vulkan_project main.cpp "lib.h")
+set(SOURCES main.cpp app.cpp app.hpp lib.cpp lib.hpp pipeline.cpp pipeline.cpp vma_usage.cpp)
+
+add_executable(${PROJECT_NAME} ${SOURCES})
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_BUILD_TYPE Debug)
-set(CMAKE_CXX_SCAN_FOR_MODULES ON)
 
 if(WIN32)
   # Enable Hot Reload for MSVC compilers if supported.
@@ -22,6 +23,7 @@ elseif(APPLE)
   set(Vulkan_LIBRARY "$ENV{VULKAN_SDK}/lib/libvulkan.dylib")
   set(Vulkan_INCLUDE_DIR "$ENV{VULKAN_SDK}/include")
   
+  # target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic -Werror)
   # cmake_print_variables(Vulkan_LIBRARY Vulkan_INCLUDE_DIR)
   # cmake_print_variables(CMAKE_INCLUDE_PATH CMAKE_SYSTEM_INCLUDE_PATH CMAKE_PREFIX_PATH)
 endif()
@@ -31,4 +33,4 @@ find_package(glfw3 CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(fmt CONFIG REQUIRED)
 
-target_link_libraries(vulkan_project Vulkan::Vulkan Vulkan::Headers Vulkan::shaderc_combined glfw glm::glm fmt::fmt)
+target_link_libraries(${PROJECT_NAME} Vulkan::Vulkan Vulkan::Headers Vulkan::shaderc_combined glfw glm::glm fmt::fmt)
